various tweaks